Closed
Bug 1205328
Opened 6 years ago
Closed 6 years ago
win32 build failure in RegexpAST.h because of a conflicting macro "min"
Categories
(Core :: JavaScript Engine: JIT, defect)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla43
Tracking | Status | |
---|---|---|
firefox43 | --- | fixed |
People
(Reporter: bbouvier, Assigned: bbouvier)
References
Details
Attachments
(1 file)
1.05 KB,
patch
|
ehsan
:
review+
|
Details | Diff | Splinter Review |
When doing try builds for bug 1181612, i've got consistent reproducible failures in irregexp/RegexpAST.h: a syntax error first, and then everybody loses their mind. https://treeherder.mozilla.org/logviewer.html#?job_id=11518343&repo=try https://treeherder.mozilla.org/logviewer.html#?job_id=11518342&repo=try https://treeherder.mozilla.org/logviewer.html#?job_id=11518340&repo=try https://treeherder.mozilla.org/logviewer.html#?job_id=11518341&repo=try The worrying fact is that the line right above the first error says: 04:46:04 INFO - c:\builds\moz2_slave\try-w64-0000000000000000000000\build\src\js\src\irregexp/RegExpAST.h(315) : warning C4003: not enough actual parameters for macro 'min' And we indeed have a few 'min' and 'max' macros in the tree. I think this is happening because adding a few files to the build system slightly moved the unified files including, but that's a wild guess. Try to reproduce the behavior with a simple file: https://treeherder.mozilla.org/#/jobs?repo=try&revision=60efe0174a06
Assignee | ||
Comment 1•6 years ago
|
||
Alternatively, undef'ing min/max in irregexp/RegExpAST.h, but that sounds hacky: https://treeherder.mozilla.org/#/jobs?repo=try&revision=347bc21d583f
Updated•6 years ago
|
Attachment #8661839 -
Flags: review+
https://hg.mozilla.org/mozilla-central/rev/80822711aca5
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox43:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Updated•3 years ago
|
Assignee: nobody → bbouvier
You need to log in
before you can comment on or make changes to this bug.
Description
•