Bug 1205328: undef min/max at the top of irregexp/RegExpAST.h if they're already defined; r=ehsan

--HG--
extra : commitid : IUMVPkcozaG
extra : rebase_source : ab9efea6f8651ac254085d3bf033323bdbfc9e98